--- a/GetComics/Crawer/App.config
+++ b/GetComics/Crawer/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="Mssql" value="Data Source=106.75.28.173;Initial Catalog=D_Comic;User Id=comicUser;Password=dhF11flajds_~D#dff*!; "/>   
+    <add key="Mssql" value="Data Source=106.75.28.173;Initial Catalog=D_Comic;User Id=comicUser;Password=dhF11flajds_~D#dff*!; " />   
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -23,6 +23,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Topshelf" publicKeyToken="b800c4cfcdeea87b" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
