--- a/GetComics/ExcelModel/ExcelModel.csproj
+++ b/GetComics/ExcelModel/ExcelModel.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1EF6ED4D-A20C-46BE-9734-7C704E78C9A1}</ProjectGuid>
+    <ProjectGuid>{B15D2120-8DF8-4732-B62C-39698405562F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Entity</RootNamespace>
-    <AssemblyName>Entity</AssemblyName>
+    <RootNamespace>ExcelModel</RootNamespace>
+    <AssemblyName>ExcelModel</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,18 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Chloe, Version=2.19.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Chloe.2.19.0\lib\net40\Chloe.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Chloe.Extension, Version=1.7.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Chloe.Extension.1.7.0\lib\net40\Chloe.Extension.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Chloe.SqlServer, Version=2.19.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Chloe.SqlServer.2.19.0\lib\net40\Chloe.SqlServer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -52,23 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseEntity.cs" />
-    <Compile Include="Chapter.cs" />
-    <Compile Include="Comic.cs" />
-    <Compile Include="Err_ChapterJob.cs" />
-    <Compile Include="Err_ComicJob.cs" />
-    <Compile Include="Err_PageJob.cs" />
-    <Compile Include="Page.cs" />
+    <Compile Include="bkIm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Enum\Enum.csproj">
-      <Project>{658E8EB6-B7CE-4446-8244-4EB62D76BF6B}</Project>
-      <Name>Enum</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
