--- a/GetComics/UFileSDK/UFileSDK.csproj
+++ b/GetComics/UFileSDK/UFileSDK.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1EF6ED4D-A20C-46BE-9734-7C704E78C9A1}</ProjectGuid>
+    <ProjectGuid>{2F0D381B-C0C8-4DA5-84C5-176F58C885C7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Entity</RootNamespace>
-    <AssemblyName>Entity</AssemblyName>
+    <RootNamespace>UFileSDK</RootNamespace>
+    <AssemblyName>UFileSDK</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,20 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Chloe, Version=2.19.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Chloe.2.19.0\lib\net40\Chloe.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Chloe.Extension, Version=1.7.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Chloe.Extension.1.7.0\lib\net40\Chloe.Extension.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Chloe.SqlServer, Version=2.19.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Chloe.SqlServer.2.19.0\lib\net40\Chloe.SqlServer.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,23 +45,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseEntity.cs" />
-    <Compile Include="Chapter.cs" />
-    <Compile Include="Comic.cs" />
-    <Compile Include="Err_ChapterJob.cs" />
-    <Compile Include="Err_ComicJob.cs" />
-    <Compile Include="Err_PageJob.cs" />
-    <Compile Include="Page.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="Conf\Config.cs" />
+    <Compile Include="Digest\Digest.cs" />
+    <Compile Include="Http\Http.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proxy\Proxy.cs" />
+    <Compile Include="Utils\MimeTypeMap.cs" />
+    <Compile Include="Utils\UfileError.cs" />
+    <Compile Include="Utils\Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Enum\Enum.csproj">
-      <Project>{658E8EB6-B7CE-4446-8244-4EB62D76BF6B}</Project>
-      <Name>Enum</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
